# kotobuki

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  publish.yml  tests.yml
docs/: kotobuki.md
src/kotobuki/: __init__.py
src/kotobuki/mapping_updater/: cli.py  db.py  io.py  log.py  relationship.py  update_usagi.py
tests/python/mapping_updater/: conftest.py  test_case_insensitive_homonym.py  test_homonym_mappings.py  test_logging.py  test_mapping_paths.py  test_usagi_mappings.py  test_usagi_updater_e2e.py
tests/python/mapping_updater/db_setup/: vocab_ddl.sql
tests/python/mapping_updater/db_setup/vocab_data/: CONCEPT.csv  CONCEPT_RELATIONSHIP.csv
tests/python/mapping_updater/test_data/usagi_files/: mapping_to_0.csv
tests/python/mapping_updater/test_data/usagi_files/stcm/: usagi_test_stcm.csv
tests/python/mapping_updater/test_data/usagi_files/to_vocab/extensive/: DRUG_ROUTE_MAP1.csv  MEAS_MAP1.csv
tests/python/mapping_updater/test_data/usagi_files/to_vocab/simple/: DRUG_MAP1.csv
