[project]
name = "kotobuki"
version = "0.1.1"
description = "Usagi mappings update tool"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache Software License"}
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "click>=8.2.1",
    "omop-cdm>=0.4.0",
    "pandas>=2.2.3",
    "sqlalchemy>=2.0.41",
]

[project.urls]
"Repository" = "https://github.com/thehyve/kotobuki"
"Documentation" = "https://github.com/thehyve/kotobuki/blob/main/docs/kotobuki.md"
"Bug Tracker" = "https://github.com/thehyve/kotobuki/issues"
"Changelog" = "https://github.com/thehyve/kotobuki/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "nox>=2025.10.16",
    "pre-commit>=4.2.0",
]
test = [
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "testcontainers>=4.10.0",
]
lint = [
    "ruff>=0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kotobuki"]

[project.scripts]
update-usagi-file = "kotobuki.mapping_updater.cli:main"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = [
    "./tests",
]
testpaths = "tests/python/"
